# Tythan-Code

./: GO-TO-MARKET.md  README.md  pyproject.toml
.github/workflows/: publish.yml
tests/: test_agent.py  test_agent_context.py  test_background.py  test_checkpoints.py  test_cli.py  test_codeindex.py  test_compaction.py  test_hunks.py  test_ignore.py  test_mcp_client.py  test_mcp_config.py  test_provider_compaction_hooks.py  test_providers.py  test_rules.py  test_sca.py  test_security.py  test_tools.py  test_ui.py  test_webfetch.py
tests/fixtures/: mcp_test_server.py
tythancode/: __init__.py  agent.py  background.py  checkpoints.py  cli.py  codeindex.py  config.py  hunks.py  ignore.py  mcp_client.py  rules.py  sca.py  security.py  storage.py  tools.py  ui.py  webfetch.py
tythancode/providers/: openai_backend.py
